--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-government-launches-first-ever-pop-up-consulate-in-louisville">UK government launches first ever pop-up consulate in Louisville</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/269052.es-419">Referentes locales compartieron sus experiencias sobre liderazgo en las Chevening TALKS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230454.es-419">Oportunidad Laboral en la Embajada Británica Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/266786.cs">Velvyslanectví uspořádalo mezinárodní energetický summit</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/206719.es">7ª Exhibición de la industria británica de seguridad</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/indian-ocean-tsunami-10th-anniversary-prime-ministers-message">Indian Ocean tsunami 10th anniversary: Prime Minister&rsquo;s message</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/baroness-warsi-meets-bangladesh-political-leaders-in-dhaka">Baroness Warsi meets Bangladesh political leaders in Dhaka</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/262681.pt">SP assina acordo com Reino Unido na área de ciência e tecnologia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215466.es">&ldquo;España es una de las naciones europeas líderes en el ámbito científico&hellip;por lo que es muy importante para nosotros&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/266786.cs">Velvyslanectví uspořádalo mezinárodní energetický summit</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
