--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-government-launches-first-ever-pop-up-consulate-in-louisville">UK government launches first ever pop-up consulate in Louisville</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269052.es-419">Referentes locales compartieron sus experiencias sobre liderazgo en las Chevening TALKS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262681.pt">SP assina acordo com Reino Unido na área de ciência e tecnologia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/215466.es">&ldquo;España es una de las naciones europeas líderes en el ámbito científico&hellip;por lo que es muy importante para nosotros&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/266786.cs">Velvyslanectví uspořádalo mezinárodní energetický summit</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--6">國家海洋安全戰略</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/hand-in-hand-with-a-more-dynamic-africa--2">Hand in hand with a more dynamic Africa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/255470.es-419">Expertos del Reino Unido compartirán sus conocimientos en Rueda de Innovación y Negocios en Colombia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-boosts-fight-against-illegal-wildlife-trade--2">UK boosts fight against illegal wildlife trade</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233503.es">El Consulado de Palma de Mallorca cerrado temporalmente</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-runs-second-successful-course-about-understanding-nato--2">UK delegation runs second successful course about understanding NATO</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-world-day-against-the-death-penalty-day-10th-october-2013--2">The UK Supports World Day Against the Death Penalty Day- 10th October 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--16">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/celebrating-the-life-and-legacy-of-shakespeare-in-2016--2">Celebrating the life and legacy of Shakespeare in 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--38">Turks and Caicos post-cabinet meeting statement</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
