--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -362,14 +362,14 @@ actually any pages with this document type.</p>
 <ul>
 <li><a href="https://www.gov.ukhttp//www.canterbury.gov.uk">Canterbury City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.watford.gov.uk/">Watford Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hertsdirect.org/">Hertfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.boroughofpoole.com">Borough of Poole Council</a></li>
 <li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk">Ethnicity facts and figures</a></li>
 <li><a href="https://www.gov.ukhttps//www.gov.uk/alerts">Emergency Alerts</a></li>
-<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.carlisle.gov.uk">Carlisle City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.workplacepensions.gov.uk/">Workplace Pensions</a></li>
-<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
+<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.hambleton.gov.uk/">Hambleton District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ards-council.gov.uk/">Ards Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
