--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -363,13 +363,13 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.lambeth.gov.uk">London Borough of Lambeth Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.arun.gov.uk/">Arun District Council</a></li>
 <li><a href="https://www.gov.ukhttps//www.gov.scot/coronavirus-covid-19/">Coronavirus (COVID-19) in Scotland - gov.scot</a></li>
-<li><a href="https://www.gov.ukhttps//covid19.nhs.uk/">Get the NHS COVID-19 app</a></li>
-<li><a href="https://www.gov.ukhttp//www.reading.gov.uk/">Reading Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bournemouth.gov.uk">Bournemouth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//productrecall.campaign.gov.uk">Product Recall - Acting on product safety</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.police.uk/">Crime in your area - Police UK</a></li>
+<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
