--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--6">Celebrating three GREAT English exports in 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--10">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/235531.pt">Estado de SP e Reino Unido anunciam parceria</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/284564.es-419">Embajada Británica otorgará 10 becas para estudiar inglés en línea</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179098.es-419">¡Wenlock y Mandeville buscan dónde estudiar en México!</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/226243.pt">Consulado Britânico promove conferência sobre petróleo e gás</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259782.ja">英国ショッピングウィーク　SNSキャンペーン第一弾を開催</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247572.es-419">México y el Reino Unido en la Cumbre Mundial para Erradicar la Violencia Sexual en Conflictos Armados</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/176281.ur">برطانوی ہائی کمشنر کی جانب سے پاکستانیوں کے لیے عید مبارک کا پیغام</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukrwanda-cycling-a-formula-for-success--2">UK/Rwanda cycling – a formula for success</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
